tests/samples/valid/AssignAchievement.py
# cases where AssignAchievement should unlock

# >> CASE
x = 4

# >> CASE
x = [4, 5, 6]
