tests/samples/invalid/ComprehensionsAchievement.py
# cases where ComprehensionsAchievement should not unlock

# >> CASE
for _ in range(10):
    pass

# >> CASE
set([4, 5, 6])

# >> CASE
{4, 5, 6}
